--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,11 @@ transformers>=4.20.0
 torch>=1.9.0
 sentencepiece>=0.1.95
 protobuf>=3.20.0
+pip~=25.2
+attrs~=25.3.0
+wheel~=0.41.2
+filelock~=3.19.1
+librosa~=0.11.0
+opencv-python~=4.12.0.88
+numpy~=2.2.6
+art~=6.5
